# kaggle-submissions

./: .gitignore  README.md  pyproject.toml
src/spaceship_titanic/: spaceship_titanic.ipynb
