[project]
name = "kaggle-submissions"
version = "0.1.0"
description = "Kaggle competition submissions"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spaceship_titanic"]

[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
]